<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/recite_tv_word"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/icon_my_self"
        android:gravity="center"
        android:text="@string/show_words"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/recite_tv_translate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/icon_my_self"
        android:gravity="center"
        android:hint="@string/show_translate"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/recite_btn_renshi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/icon_my_touxiang"
            android:text="@string/l_know"
            android:textSize="15sp" />

        <Button
            android:id="@+id/recite_btn_burenshi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/icon_my_touxiang"
            android:text="@string/dont_know"
            android:textSize="15sp" />

        <Button
            android:id="@+id/recite_btn_next"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/icon_my_touxiang"
            android:text="@string/next_words"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>