<?xml version="1.0" encoding="utf-8"?>
<!--
layout_below    指定在某个控件下面(RelativeLayout 的属性)
margin：作用于容器中的组件        padding：作用于组件中的元素（比如TextView中的文本）
layout_alignParentBottom    是否在父容器底部

id命名：
@+id/title  添加一个id为title的组件（id有时直接使用，没有则新加）
@id/title   引用一个title的组件


dp 与 sp ：
sp会随用户设置字体大小而变化，dp则不会；所以设置组件一般用dp，设置字体用sp


style="?android:attr/buttonBarButtonStyle"      按钮样式
多个按钮在同一个布局会被认为是按钮栏，需要添加此样式消除边框

-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_frist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!-- vertical垂直布局    horizontal 水平布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wel_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/wel_time"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wel_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimary"
                android:text="@string/wel_description"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimary"
                android:text="@string/hello_description"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/first_tv"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/icon_fragment_bg"
            android:gravity="center"
            android:text="@string/start_study"
            android:textColor="@color/colorOrange"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/first_tv2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/icon_fragment_bg"
            android:gravity="center"
            android:text="@string/start_study2"
            android:textColor="@color/colorOrange"
            android:textSize="15sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/first_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp" >

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_fl"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/first_btn_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/icon_button"
            android:text="@string/write_description"
            android:textSize="13sp"
             />

        <Button
            android:layout_weight="1"
            android:id="@+id/first_btn_recite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/icon_button"
            android:text="@string/recite_description"
            android:textSize="13sp" />

        <Button
            android:layout_weight="1"
            android:id="@+id/first_btn_onlineTranslation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/icon_button"
            android:text="@string/online_translation"
            android:textSize="13sp" />

        <Button
            android:layout_weight="1"
            android:id="@+id/first_btn_self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_button"
            android:gravity="center"
            android:text="@string/yourself_description"
            android:textSize="13sp" />

    </LinearLayout>

</RelativeLayout>
